primera version de la memoria

--- a/LatexTFG/Capitulos/01Capitulo1.tex
+++ b/LatexTFG/Capitulos/01Capitulo1.tex
@@ -38,9 +38,9 @@ La monitorización de ciertas señales biomédicas puede ser un factor fundamental 
 
 
 %-------------------------------------------------------------------
-\section{Estructura de capítulos}
+%\section{Estructura de capítulos}
 %-------------------------------------------------------------------
-\label{cap1:sec:estructura}
+%\label{cap1:sec:estructura}
 
 %-------------------------------------------------------------------
 %\section*{\NotasBibliograficas}
