--- a/LatexTFG/Capitulos/03Capitulo3.tex
+++ b/LatexTFG/Capitulos/03Capitulo3.tex
@@ -42,7 +42,7 @@ En ciertos contextos, la pérdida de cierto número de muestras puede ser despreci
 
 El conjunto total de muestras que se perdía durante la transmisión de información era variable según distintas condiciones y factores externos que influyesen en el momento de la recopilación de información. Generalmente, si únicamente se ejecutaba el programa de usuario sin tener otras aplicaciones que consumiesen muchos recursos tanto de memoria como de cálculo computacional  en la BBB, la suma total de muestras perdidas podía encontrarse entre el 1 y el 2\% del total de muestras generadas. Sin embargo, si mientras se ejecutaba el programa en C, se ejecutaba algún otro programa que necesitase algún tipo de recurso para ser ejecutado, el número de muestras perdidas por la lectura en espacio de usuario podía dispararse. 
 
-Observamos que al ejecutar incluso ciertos comandos de consola, podría llegar a darse la situación anteriormente nombrada. Suponiendo que la ejecución del programa se realiza sobre un sistema operativo anfitrión con alguna distribución linux ejecutándose (en nuestro caso se trataba de una distribución Debian especial para la placa BBB), si tratabamos de ejecutar un comando como \texttt{top} \footnote{Más información sobre el comando top disponible en \href{https://linux.die.net/man/1/top}{https://linux.die.net/man/1/top}} (que muestra las tareas que esten ejecutándose en la máquina anfitriona en tiempo real y actualizadolas en intervalos cortos de tiempo como puede apreciarse en la [Fig \ref{fig:top}]), el número de muestras perdidas aumentaba de forma exponencial. Es decir, para que las pérdidas realmente no fuesen significativas, el dispositivo sobre el que se ejecutase el programa, no debería estar ejecutándo nada adicional, o al menos no muchas más aplicaciones. Siendo conscientes de la baja probabilidad de que esta situación se diese en un entorno real, sabíamos que algo teníamos que hacer para evitar esa pérdida de muestras en cualquier situación. Esta pérdida era básicamente producida por interrupciones que lanzaba el propio sistema operativo anfitrión cuando fuese preciso, otorgando la CPU a otros procesos que no fuesen el programa que recogía las muestras durante cierto tiempo, suficiente para significar una pérdida representativa.
+Observamos que al ejecutar incluso ciertos comandos de consola, podría llegar a darse la situación anteriormente nombrada. Suponiendo que la ejecución del programa se realiza sobre un sistema operativo anfitrión con alguna distribución linux ejecutándose (en nuestro caso se trataba de una distribución Debian especial para la placa BBB), si tratabamos de ejecutar un comando como \texttt{top} \footnote{Más información sobre el comando top disponible en \href{https://linux.die.net/man/1/top}{https://linux.die.net/man/1/top}} (que muestra las tareas que esten ejecutándose en la máquina anfitriona en tiempo real y actualizadolas en intervalos cortos de tiempo como puede apreciarse en la [Fig \ref{fig:top}]), el número de muestras perdidas aumentaba de forma exponencial. Es decir, para que las pérdidas realmente no fuesen significativas, el dispositivo sobre el que se ejecutase el programa, no debería estar ejecutándo nada adicional, o al menos no muchas más aplicaciones. Siendo conscientes de la baja probabilidad de que esta situación se diese en un entorno real, sabíamos que algo teníamos que hacer para evitar esa pérdida de muestras en cualquier situación. Esta pérdida era básicamente producida por interrupciones que lanzaba el propio sistema operativo anfitrión cuando fuese preciso, otorgando la \ac{CPU} a otros procesos que no fuesen el programa que recogía las muestras durante cierto tiempo, suficiente para significar una pérdida representativa.
 
 \figura{Vectorial/top}{width=1\textwidth}{fig:top}%
 {Ejemplo de salida al ejecutar comando \texttt{top} en una terminal linux}
@@ -56,7 +56,7 @@ Sabiendo que el sistema operativo no tenia por qué garantizarnos la CPU para el 
 
 Teniendo en mente el problema anteriormente nombrado, era momento de buscar alternativas para solventarlo. La solución más inmediata que pasó por nuestra cabeza, fue la de sustituir la distribución Debian que utilizabamos en la BBB por una distribución que estuviese pensada para trabajar con análisis y tratamientos de datos en tiempo real. De esta forma, el sistema operativo no interrumpiría el proceso de análisis de muestras otorgando la CPU a otras tareas, y por consiguiente, presumiblemente no se produciría la pérdida de ninguna muestra. Sin embargo está solución parecía poco sostenible, ya que el hecho de recurrir a una distribución tan específica podría no ser accesible para todo tipo de usuarios y dispositivos, sin olvidar la dependencia que se generaría hacia ese sistema operativo concreto, impidiendo con la más absoluta de las certezas que funcionase éxitosamente en otros tipo de sistemas operativos (ya que por decirlo de algún modo, sería como un traje a medida). Sin embargo, si se utilizase una distribución genérica, como el Debian que usabamos en aquel momento, no habría problemas, ya que se trata de una distribución de proposito general a la que cualquier usuario podría recurrir de manera relativamente sencilla.
 
-Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, denominadas PRUs (programable real-time unit). Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir tratando los procesos en tiempo real en segundo plano, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200-MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real.
+Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir tratando los procesos en tiempo real en segundo plano, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200-MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real.
 
 A continuación se enumeran los motivos por los que escogimos recurrir a las PRUs:
 
@@ -107,11 +107,11 @@ Cada uno de los pines físicos que incorpora la placa tiene una función determina
 
 \begin{itemize}
 \item Para empezar, se han destacado en color rojo los pines de 5, 3 y 1.8 \textit{Voltios}, así como los pines de tierra (DGND). Hay que tener en cuenta que VDD\_ ADC es un pin de 1.8 \textit{V} que se usa para proporcionar una referencia para las funciones de lectura analógica.
-\item Los pines de propósito general de entrada y salida (GPIO) están destacados en color verde. Cabe destacar que algunos  de estos pines se pueden usar para comunicación serie (UART) \footnote{\label{note1}Más información sobre UART e I2C disponible en \href{https://geekytheory.com/puertos-y-buses-1-i2c-y-uart}{https://geekytheory.com/puertos-y-buses-1-i2c-y-uart}}.
+\item Los pines \ac{GPIO} están destacados en color verde. Cabe destacar que algunos  de estos pines se pueden usar para comunicación serie (UART) \footnote{\label{note1}Más información sobre UART e I2C disponible en \href{https://geekytheory.com/puertos-y-buses-1-i2c-y-uart}{https://geekytheory.com/puertos-y-buses-1-i2c-y-uart}}.
 \item Si se desea simular una salida analógica comprendida entre 0 y 3.3 \textit{V}, se pueden usar los pines PWM destacados en morado. 
 \item Los pines destacados en color azul pueden ser utilizados como entradas analógicas \footnote{Estas entradas analógicas toleran voltajes comprendidos entre los 0 y los 1.8 \textit{Voltios}, no soportan voltajes superiores a los 1.8 \textit{V}}. 
 \item Los pines en color naranja clarito pueden ser usados para I2C \textsuperscript{\ref{note1}}.
-\item Los pines destacados en color naranja oscuro son fundamentalmente usados para aplicaciones de pantalla LCD.
+\item Los pines destacados en color naranja oscuro son fundamentalmente usados para aplicaciones de pantalla \ac{LCD}.
 \end{itemize}
 
 %-------------------------------------------------------------------
@@ -119,7 +119,7 @@ Cada uno de los pines físicos que incorpora la placa tiene una función determina
 %-------------------------------------------------------------------
 \label{cap3:subsec:dt}
 
-Un Device Tree (DT) es una descripción del hardware de un sistema. Debería incorporar el nombre de la CPU, la configuración de memoria, y cualquier periférico (interno y externo). Un DT no deberia ser usado para describir software, a pesar de que listar los modulos harware pueda causar que estos se carguen. Es preciso recordar que los DTs son neutros en lo que se refiere al sistema operativo, es decir, no deberían incluir nada específico de Linux por ejemplo.
+Un \ac{DT} es una descripción del hardware de un sistema. Debería incorporar el nombre de la CPU, la configuración de memoria, y cualquier periférico (interno y externo). Un DT no deberia ser usado para describir software, a pesar de que listar los modulos harware pueda causar que estos se carguen. Es preciso recordar que los DTs son neutros en lo que se refiere al sistema operativo, es decir, no deberían incluir nada específico de Linux por ejemplo.
 
 
 \figura{Vectorial/dt}{width=1\textwidth}{fig:dt}%
@@ -141,7 +141,7 @@ Un SoC (System-on-Chip moderno) moderno es un dispositivo muy complejo; un DT co
 Pero cuando una placa como la BBB es compatible con accesorios expandibles, el problema puede ser aun más complejo. En última instancia, cada configuración posible requiere un DT para ser descrita, pero una vez que se tenga en cuenta el hardware de base y las expansiones que requieren el uso de unos pines GPIO determinados que pueden ser compartidos por otras configuraciones diferentes, el número de combinaciones posibles comienza a multiplicarse rápidamente.
 
 Lo que se necesita es una forma de describir estos componentes opcionales utilizando un DT parcial, y luego poder construir un árbol completo tomando un DT como base y añadiendo una serie de elementos opcionales. 
-Estos elementos opcionales son denominados \textit{overlays}. Al DT que se forma siguiendo este proceso se le denomina Device Tree Overlay (DTO).
+Estos elementos opcionales son denominados \textit{overlays}. Al DT que se forma siguiendo este proceso se le denomina \ac{DTO}.
 
 \figura{Vectorial/dto}{width=1\textwidth}{fig:dto}%
 {Device Tree Overlay del proyecto para la BBB}
