--- a/LatexTFG/Capitulos/04Capitulo4.tex
+++ b/LatexTFG/Capitulos/04Capitulo4.tex
@@ -19,7 +19,7 @@ Isaac Newton
 \end{FraseCelebre}
 
 \begin{resumen}
-Aquí va el resumen del capítulo 4.
+El propósito principal del poroyecto es ser lo más portable posible. Es por esto que se ha desarrollado una aplicación para dispositivos móviles en la que se observan visualmente los resultados del análisis de ciertos datos. En este capítulo se explican detalles técnicos sobre la aplicación móvil, así como la infraestructura que ha sido necesaria desplegar para su puesta en marcha.
 \end{resumen}
 
 %-------------------------------------------------------------------
@@ -95,7 +95,7 @@ Sabíamos que la realización de todas estas ampliaciones supondría un reto técnic
 
 La renovación visual de la aplicación ha supuesto un cambio muy significativo respecto a la apariencia de la misma. En lugar de acceder directamente a la pantalla principal, que nos muestra la gráfica y la opción de sincronizar mediante Bluetooth, según se abre la nueva aplicación, se accede a una pantalla de identificación de usuario, tal y como puede apreciarse en la [Fig \ref{fig:log}]. 
 
-Una vez el usuario correspondiente se ha identificado, accede a un pequeño menu con 3 opciones disponibles como puede observarse en la [Fig\ref{fig:menu}]. La primera opción permite la recepción de información mediante Bluetooth con la BBB ([Fig\ref{fig:grafica}]). La segunda permite buscar un paciente para ver en tiempo real su ECG en tiempo real ([Fig\ref{fig:buscar}]), y la última nos proporciona información de nuestro perfil de usuario.
+Una vez el usuario correspondiente se ha identificado, accede a un pequeño menú con 3 opciones disponibles como puede observarse en la [Fig\ref{fig:menu}]. La primera opción permite la recepción de información mediante Bluetooth con la BBB ([Fig\ref{fig:grafica}]). La segunda permite buscar un paciente para ver en tiempo real su ECG en tiempo real ([Fig\ref{fig:buscar}]), y la última nos proporciona información de nuestro perfil de usuario.
 
 \begin{figure}[t]
 \centering
