--- a/LatexTFG/Cascaras/abstract.tex
+++ b/LatexTFG/Cascaras/abstract.tex
@@ -15,14 +15,16 @@
 
 \begin{FraseCelebre}
 \begin{Frase}
-...
+Encuéntrate y sé tú mismo; \\
+recuerda que no hay nadie como tú
 \end{Frase}
 \begin{Fuente}
-...
+Dale Carnegie
 \end{Fuente}
 \end{FraseCelebre}
 
-...
+Aquí va el resumen en inglés.
+
 
 \endinput
 % Variable local para emacs, para  que encuentre el fichero maestro de
