--- a/LatexTFG/Cascaras/agradecimientos.tex
+++ b/LatexTFG/Cascaras/agradecimientos.tex
@@ -52,60 +52,29 @@ Inicio de las Leyes Orgánicas. Juan Carlos I
 \end{Fuente}
 \end{FraseCelebre}
 
-Groucho Marx decía que encontraba a la televisión muy educativa porque
-cada vez que alguien la encendía, él se iba a otra habitación a leer
-un libro. Utilizando un esquema similar, nosotros queremos agradecer
-al Word de Microsoft el habernos forzado a utilizar \LaTeX. Cualquiera
-que haya intentado escribir un documento de más de 150 páginas con
-esta aplicación entenderá a qué nos referimos. Y lo decimos porque
-nuestra andadura con \LaTeX\ comenzó, precisamente, después de
-escribir un documento de algo más de 200 páginas. Una vez terminado
-decidimos que nunca más pasaríamos por ahí. Y entonces caímos en
-\LaTeX.
+Fue en el segundo año de carrera, concretamente en la asignatura sistemas operativos, cuando tuvimos la oportunidad de conocer al que sería el director de nuestro trabajo de fin de grado. Joaquín Recas Piorno era el profesor encargado de impartir de forma presencial la asignatura.
 
-Es muy posible que hubíeramos llegado al mismo sitio de todas formas,
-ya que en el mundo académico a la hora de escribir artículos y
-contribuciones a congresos lo más extendido es \LaTeX. Sin embargo,
-también es cierto que cuando intentas escribir un documento grande
-en \LaTeX\ por tu cuenta y riesgo sin un enlace del tipo ``\emph{Author
-  instructions}'', se hace cuesta arriba, pues uno no sabe por donde
-empezar.
+Nos fascinó desde un primer momento su forma de implicarse en el proceso de aprendizaje con el alumnado. Era tan contagiosa su pasión por la informática, que hacía crecer nuestro interés y curiosidad por la materia. Sin duda, uno de los profesores más instructivos y apasionados en su forma de explicar con los que hemos tenido la suerte de coincidir. Durante el transcurso de la asignatura de la cual él era docente, hemos de destacar que pasamos algo desapercibidos para él, incluso una vez terminada la asignatura. Aun así, estabamos deseosos de que en un futuro, pudiesemos ser alumnos suyos de nuevo en alguna asignatura de los dos años restantes de carrera. Lamentablemente, no fue así.
 
-Y ahí es donde debemos agradecer tanto a Pablo Gervás como a Miguel
-Palomino su ayuda. El primero nos ofreció el código fuente de una
-programación docente que había hecho unos años atrás y que nos sirvió
-de inspiración (por ejemplo, el fichero \texttt{guionado.tex} de
-\texis\ tiene una estructura casi exacta a la suya e incluso puede
-que el nombre sea el mismo). El segundo nos dejó husmear en el código
-fuente de su propia tesis donde, además de otras cosas más
-interesantes pero menos curiosas, descubrimos que aún hay gente que
-escribe los acentos españoles con el \verb+\'{\i}+.
+Durante el penúltimo año de carrera, habíamos tomado la decisión de plantearle ser el director de nuestro trabajo de fin de grado. Fue aun más fascinante para nosotros está decisión, cuando investigamos la temática de los trabajos que Joaquín había dirigido en los últimos años. Estabán intimamente relacionados con el campo de la medicina y la salud, justo la temática sobre la que estabamos seguros que nuestro proyecto trataría.
 
-No podemos tampoco olvidar a los numerosos autores de los libros y
-tutoriales de \LaTeX\ que no sólo permiten descargar esos manuales sin
-coste adicional, sino que también dejan disponible el código fuente.
-Estamos pensando en Tobias Oetiker, Hubert Partl, Irene Hyna y
-Elisabeth Schlegl, autores del famoso ``The Not So Short Introduction
-to \LaTeXe'' y en Tomás Bautista, autor de la traducción al español. De
-ellos es, entre otras muchas cosas, el entorno \texttt{example}
-utilizado en algunos momentos en este manual.
+Fue entonces, cuando ni siquiera habíamos terminado nuestro tercer año de carrera, cuando nos pusimos en contacto con él y le realizamos la propuesta de trabajar con él.
 
-También estamos en deuda con Joaquín Ataz López, autor del libro
-``Creación de ficheros \LaTeX\ con {GNU} Emacs''. Gracias a él dejamos
-de lado a WinEdt y a Kile, los editores que por entonces utilizábamos
-en entornos Windows y Linux respectivamente, y nos pasamos a emacs. El
-tiempo de escritura que nos ahorramos por no mover las manos del
-teclado para desplazar el cursor o por no tener que escribir
-\verb+\emph+ una y otra vez se lo debemos a él; nuestro ocio y vida
-social se lo agradecen.
+Desde un primer momento se mostró totalmente colaborativo con nostros, además de mostrar un interés desmesurado por ayudarnos, aun sabiendo que poco o nada sabíamos de la materia sobre la que ibamos a realizar el proyecto. Así fue como comenzó el proyecto que en la presente memoria trata de ser ilustrado.
 
-Por último, gracias a toda esa gente creadora de manuales, tutoriales,
-documentación de paquetes o respuestas en foros que hemos utilizado y
-seguiremos utilizando en nuestro quehacer como usuarios de
-\LaTeX. Sabéis un montón.
+Sin duda, nuestro mayor agradecimiento es para Joaquín, por cedernos una enorme cantidad de su valioso tiempo, por su capacidad de ayudar desinteresadamente y por proporcionarnos todos los materiales necesarios para la consecución del proyecto. Fue él, el que nos facilitó todos los recursos tanto hardware, como software, tan necesarios para el proyecto. De no haber sido por él, y por las facilidades que nos ofreció en todo momento de forma entusiasta, el lector no podría ni si quiera leer estas líneas.
 
-Y para terminar, a Donal Knuth, Leslie Lamport y todos los que hacen y
-han hecho posible que hoy puedas estar leyendo estas líneas.
+Queremos agradecer tambíen el altruista trabajo que realizaron tanto Marco Antonio, como Pedro Pablo Gómez Martín en el desarrollo de una plantilla \LaTeX\ específica para este tipo de trabajos, conocida como \texis\ \footnote{\href{http://gaia.fdi.ucm.es/research/texis}{http://gaia.fdi.ucm.es/research/texis}}. De no haber contado con esta plantilla, el tiempo de desarrollo de la presente memoria se habría multiplicado, no nos cabe duda. Nuestro ocio y vida social se lo agradecen a ambos.
+
+Nuestros agradecimientos van dirigidos también al Dr. José Manuel Bote, cuyo aporte al proyecto ha sido fundamental para su éxitosa conclusión. Tanto la aplicación Android original, como un programa desarrollado en Python utilizado en el proyecto han sido desarrollados por él. 
+
+Agradecemos a Xavier Gallofré Nieva, Jesús F. López San José y Álvaro Pérez Liaño los esfuerzos que realizaron (con Joaquín como director también) en su proyecto de fin de grado, ya que su trabajo nos ha servido como referencia en determinadas ocasiones, debido a la similitud que presentan ambos proyectos.
+
+Agradecemos a Patrick S. Hamilton el desarrollo de un algoritmo capaz de detectar ondas QRS, así como de clasificarlas, y las facilidades que él mismo aporta para la difusión de su uso. También queremos agradecer a MEDEVIT \footnote{Este es el nombre de su usuario en Github \href{https://github.com/MEDEVIT}{https://github.com/MEDEVIT}} la traducción que realiza del software original desarollado en C, a Java.
+
+Dejamos el último agradecimiento a los primeros, a nuestros padres.
+
+
 
 \endinput
 % Variable local para emacs, para  que encuentre el fichero maestro de
