--- a/LatexTFG/latex.bib
+++ b/LatexTFG/latex.bib
@@ -162,3 +162,12 @@
   lastaccess = {Mayo, 2017},
 }
 
+@Book{memPi,
+  author =	 {Xavier Gallofré Nieva and Jesús F. López San José and Álvaro Pérez Liaño},
+  title =	 {Desarrollo de dispositivos e-Health de
+bajo coste para Raspberry Pi},
+  year = 	 {2013},
+}
+
+
+
